test-cases/negative/test_134_variable_shadowing_issue.lay
# negative test: variable shadowing that might cause confusion
# expected: type checker might warn or reject

if true then
  the variable x of type Number is 5
end if
the variable x of type String is 'hello'


